# HypeServ

./: .gitignore  CMakeLists.txt  README.md  hello  help  server
SERVER_HEAD/: SignalHandler.cpp  server.cpp
SERVER_WORKER/: worker.cpp
docs/: index.html
include/: VT100.hpp  config.hpp  enumeration.hpp  parse_config.hpp  server.cpp  server.hpp
master/: server.cpp
src/: config.cpp  main.cpp  parse_config.cpp  write_config.cpp
